// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <input
        class="sc-iqAbSa fdLqwF"
        id="emailField"
        name="name"
        placeholder="Email"
        type="email"
        value="test"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podany email jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmailField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="emailField"
  name="name"
  placeholder="Email"
  type="email"
  value=""
/>
`;

exports[`<EmailField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="emailField"
        label="Test"
        name="name"
        placeholder="Email*"
        required=""
        type="email"
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<EmailField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="emailField"
        label="Test"
        name="name"
        placeholder="Email"
        type="email"
        value=""
      />
    </div>
  </form>
</div>
`;
